# data-label

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: landing-en.md  landing-zh.md
examples/: basic_workflow.py  llm_workflow.py  multi_type_annotation.py  pipeline_datarecipe_to_label.py
examples/sample_data/: classification_schema.json  results_annotator1.json  results_annotator2.json  schema.json  tasks.json
server/: config.py  main.py
server/routers/: merge.py  render.py  schemas.py  submit.py
src/datalabel/: __init__.py  cli.py  dashboard.py  generator.py  io.py  mcp_server.py  merger.py  validator.py
src/datalabel/llm/: __init__.py  client.py  guidelines.py  prelabel.py  prompts.py  quality.py
src/datalabel/mcp_server/: __init__.py  _prompts.py  _resources.py  _server.py  _tools.py
src/datalabel/templates/: annotator.html  dashboard.html
tests/: __init__.py  conftest.py  test_cli.py  test_dashboard.py  test_generator.py  test_guidelines.py  test_io.py  test_llm_client.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_merger.py  test_prelabel.py  test_quality.py  test_validator.py
