[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datalabel"
version = "0.1.0"
description = "轻量级数据标注工具 - 生成独立的 HTML 标注界面"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "liukai" }
]
keywords = ["annotation", "labeling", "data", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "markdown>=3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest", "ruff"]
all = ["knowlyr-datalabel[mcp,dev]"]

[project.scripts]
knowlyr-datalabel = "datalabel.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datalabel = "datalabel.mcp_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/datalabel"]

[tool.ruff]
line-length = 100
target-version = "py310"
