[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datalabel"
version = "0.2.0"
description = "Lightweight data annotation toolkit - generate standalone HTML labeling interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Liu Kai", email = "mrliukai@gmail.com" }
]
keywords = ["annotation", "labeling", "data-labeling", "data-annotation", "machine-learning", "training-data", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0,<9.0",
    "jinja2>=3.0,<4.0",
    "markdown>=3.0,<4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]
openai = ["openai>=1.0,<3.0"]
anthropic = ["anthropic>=0.18,<1.0"]
llm = ["knowlyr-datalabel[openai]"]
llm-all = ["knowlyr-datalabel[openai,anthropic]"]
dev = ["pytest", "pytest-cov", "ruff"]
all = ["knowlyr-datalabel[mcp,llm-all,dev]"]

[project.scripts]
knowlyr-datalabel = "datalabel.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datalabel = "datalabel.mcp_server:serve"

[project.urls]
Homepage = "https://github.com/liuxiaotong/data-label"
Documentation = "https://github.com/liuxiaotong/data-label#readme"
Repository = "https://github.com/liuxiaotong/data-label"
Issues = "https://github.com/liuxiaotong/data-label/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datalabel"]

[tool.ruff]
line-length = 100
target-version = "py310"
